--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -229,12 +229,16 @@ pub unsafe fn replace_unchecked(self, index: usize,
 }
 ```
 
-# ABI 
+# TODO: ABI 
 
-TODO: @acrichto: The objects are stored on the stack and passed by pointer. This avoids ABI
-issues with 256-bit vectors IIRC. Could .
+TODO: @acrichto: IIRC currently the Rust ABI for SIMD types always passes
+vector types by pointers. This avoids the issues mentioned in:
+https://github.com/rust-lang/rust/issues/44367
 
-TODO: C-FFI
+How exactly this work is pretty important and should be explained here. 
+
+Then we have the issue that SIMD types in `extern` functions might not be sound.
+IIRC this is currently disallowed. Is there an issue for this? 
 
 # Drawbacks
 [drawbacks]: #drawbacks
@@ -249,6 +253,10 @@ actually be required to support this.
 [alternatives]: #alternatives
 
 TODO: @acrichto: passing vector types on the stack vs on function arguments.
+
+What where the alternatives here? We discussed simd ABIs as a feature, shims,
+... and many other things, and they all caused problems with trait methods,
+function pointers, etc.
 
 # Prior art
 [prior-art]: #prior-art
