add everything that works fine to the RFC

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -6,33 +6,15 @@
 # Summary
 [summary]: #summary
 
-This RFC adds:
+This RFC adds portable packed SIMD vector types up to 256-bit.
 
-* portable vector types up to 256-bit
-* the minimal API of these types
+Future RFCs will cover some of the following extensions as they get implemented
+in `stdsimd`.
 
-This is Chapter I of the portable packed SIMD vector types quest-line:
-
-* I [RFCXYZW](): vector types (up to 256-bit) and minimal API.
-* _: casts (From/Into) and conversions (FromBits/IntoBits)
-* _: aligned/unaligned load/stores
-* _: Debug
-* _: Default
-* _: arithmetic operations
-* _: bitwise operations
-* _: shuffles
-* _: gather/scatter
-* _: arithmetic reductions
-* _: bitwise reductions
-* _: min/max reductions
-* _: boolean vectors
-* _: boolean reductions
-* _: comparisons
-* _: PartialEq, PartialOrd, Eq, Ord
-* _: Hash
-* _: formatting (LowerHex)
-* _: 512-bit vector types and masks
-* _: half-float (f16) vectors
+* portable vector shuffles, gathers, and scatters
+* boolean vectors, boolean reductions, portable vector comparisons
+* 512-bit vector types and masks
+* half-float (f16) vectors
 
 # Motivation
 [motivation]: #motivation
@@ -167,21 +149,47 @@ the `std::simd` module, that is:
 Note that half-float (`f16`) vectors are not part of this RFC but will need to
 be covered by future RFCs extending this one.
 
-## Minimal portable packed SIMD vector types API
+## API of portable packed SIMD vector types
 
-This RFC proposes a minimal API that is the fundation for other APIs that will
-be proposed later.
+### Traits overview
 
-### Traits
+All signed integer, unsigned integer, and floating point vector types implement
+the following traits:
 
-All portable vector types implement the following traits: `Copy`, `Clone`.
+* `Copy`
+* `Clone`
+* `Default`: zero-initializes the vector.
+* `Debug`: formats the vector as `({}, {}, ...)`.
+* `PartialEq<Self>`: performs a lane-wise comparison between two vectors and
+  returns `true` if all lanes compare `true`.
+* `PartialOrd<Self>`: performs a lane-wise comparison between two vectors and
+  returns `true` if all lanes compare `true`.
+* `From`/`Into`/`FromBits`/`IntoBits`: see the [lane-wise casts and bitwise
+  conversions](#casts-and-conversions) section below.
+* `Add<Output=Self>`, `Sub<Output=Self>`, `Mul<Output=Self>`, 
+  `Div<Output=Self>`, `Rem<Output=Self>`, `AddAssign`, `SubAssign`, `MulAssign`, 
+  `DivAssign`, `RemAssign`: lane-wise arithmetic operations.
+
+All signed and unsigned integer vectors also implement:
+
+* `Eq`: equivalent to `PartialEq<Self>`
+* `Ord`: equivalent to `PartialOrd<Self>`
+* `Hash`: equivalent to `Hash` for `[element_type; number_of_elements]`.
+* `fmt::LowerHex`: formats the vector as hexadecimal.
+* TODO: `fmt::UpperHex`: formats the vector as hexadecimal.
+* TODO: `fmt::Octal`: formats the vector as an octal number.
+* TODO: `fmt::Binary`: formats the vector as binary number.
+* `Not<Output=Self>`,`BitAnd<Output=Self>`, `BitOr<Output=Self>`,
+  `BitXor<<Output=Self>`, `BitAndAssign`, `BitOrAssign`,
+  `BitXorAssign`: lane-wise bitwise operations.
+* `Shl<*>`, `Shr<*>`, `ShlAssign<*>`,`ShrAssign<*>`: shifts for all literal
+  integer types.
 
 ### Inherent Methods
 
-All portable vector types implement the following methods:
+#### Construction and element access
 
-> Note: except for boolean-vector types which are not proposed here. These will
-> have their own minimal API proposed in a future RFC.
+All portable vector types implement the following methods:
 
 ```rust
 impl {element_type}{element_width}x{number_of_lanes} {
@@ -228,6 +236,189 @@ pub unsafe fn replace_unchecked(self, index: usize,
 
 }
 ```
+
+#### Lane-wise casts and bitwise conversions
+[casts-and-conversions]: #casts-and-conversions
+
+The portable vector types implement lane-wise and bitwise casts.
+
+##### Lane-wise casts
+
+Vectors with identical number of lanes can be converted into each other by
+performing lane-wise `as` casts provided by the `From` and `Into` traits. 
+
+For example:
+
+```rust
+let x = f32x2::new(1., 2.);
+let y: f64x2 = x.into();
+```
+
+These conversions are provided across all portable vector types having the same
+number of lanes.
+
+##### Bitwise casts
+
+To interface with the architecture-specific vector types and intrinsics it is
+often required to perform lossless bitwise casts from one type to another.
+
+In an analogous way to the `f32::from_bits` method and the `From` and `Into`
+traits, these conversions are performed via the reflexive `FromBits`/`IntoBits`
+traits. These conversions have run-time zero-overhead.
+
+For example:
+
+```rust
+let x = f32x4::new(1., 2., 3., 4.);
+let y: __m128 = x.into_bits();
+```
+
+These conversions are provided across all portable vector types of the same
+width, and across the portable vector types and the architecture-specific vector
+types.
+
+#### Loads and Stores
+
+All portable vector types implement the following methods:
+
+```rust
+impl {element_type}{element_width}x{number_of_lanes} {
+
+/// Writes the values of the vector to the `slice`.
+///
+/// # Panics
+///
+/// If `slice.len() < Self::lanes()` or `&slice[0]` is not
+/// aligned to an `align_of::<Self>()` boundary.
+pub fn store_aligned(self, slice: &mut [element_type]);
+
+/// Writes the values of the vector to the `slice`.
+///
+/// # Panics
+///
+/// If `slice.len() < Self::lanes()`.
+pub fn store_unaligned(self, slice: &mut [element_type]);
+
+/// Writes the values of the vector to the `slice`.
+///
+/// # Precondition
+///
+/// If `slice.len() < Self::lanes()` or `&slice[0]` is not
+/// aligned to an `align_of::<Self>()` boundary, the behavior is
+/// undefined.
+pub unsafe fn store_aligned_unchecked(self, slice: &mut [element_type]);
+
+/// Writes the values of the vector to the `slice`.
+///
+/// # Precondition
+///
+/// If `slice.len() < Self::lanes()` the behavior is undefined.
+pub unsafe fn store_unaligned_unchecked(self, slice: &mut [element_type]);
+
+/// Instantiates a new vector with the values of the `slice`.
+///
+/// # Panics
+///
+/// If `slice.len() < Self::lanes()` or `&slice[0]` is not aligned
+/// to an `align_of::<Self>()` boundary.
+pub fn load_aligned(slice: &[element_type]) -> Self
+
+/// Instantiates a new vector with the values of the `slice`.
+///
+/// # Panics
+///
+/// If `slice.len() < Self::lanes()`.
+pub fn load_unaligned(slice: &[element_type]) -> Self;
+
+/// Instantiates a new vector with the values of the `slice`.
+///
+/// # Precondition
+///
+/// If `slice.len() < Self::lanes()` or `&slice[0]` is not aligned
+/// to an `align_of::<Self>()` boundary, the behavior is undefined.
+pub unsafe fn load_aligned_unchecked(slice: &[element_type]) -> Self;
+
+/// Instantiates a new vector with the values of the `slice`.
+///
+/// # Precondition
+///
+/// If `slice.len() < Self::lanes()` the behavior is undefined.
+pub unsafe fn load_unaligned_unchecked(slice: &[element_type]) -> Self;
+
+}
+```
+
+#### Arithmetic reductions 
+
+All portable vector types implement the following methods:
+
+```rust
+impl {element_type}{element_width}x{number_of_lanes} {
+
+/// Horizontal sum of the vector elements.
+pub fn sum(self) -> element_type;
+
+/// Horizontal product of the vector elements.
+pub fn product(self) -> element_type;
+
+}
+```
+
+##### Semantics for integer vectors
+
+If integer overflow occurs the result is the mathematical result modulo `2^n`. 
+
+##### Semantics for floating point vectors.
+
+The floating-point horizontal reductions are unordered. That is, the reductions
+are **not** equivalent to:
+
+```rust
+let mut val: f32 = vec.extract(0);
+for i in 1..f32x4::lanes() {
+    val += vec.extract(i);
+}
+assert_eq!(val, vec.sum()); // MAYBE FAILS
+```
+
+#### Bitwise reductions 
+
+All signed and unsigned integer vectors implement the following methods:
+
+```rust
+impl {element_type}{element_width}x{number_of_lanes} {
+
+/// Horizontal bitwise `and` of the vector elements.
+pub fn and(self) -> element_type;
+
+/// Horizontal bitwise `or` of the vector elements.
+pub fn or(self) -> element_type;
+
+/// Horizontal bitwise `xor` of the vector elements.
+pub fn xor(self) -> element_type;
+
+}
+```
+
+#### Min/Max reductions
+
+All portable vector types implement the following methods:
+
+```rust
+impl {element_type}{element_width}x{number_of_lanes} {
+            
+/// Value of the largest element in the vector.
+pub fn max(self) -> element_type;
+
+/// Value of the smallest element in the vector.
+pub fn min(self) -> element_type;
+
+}
+```
+
+##### Semantics for floating-point vectors
+
+If the vector contains `NaN`s the result is unspecified. 
 
 # TODO: ABI 
 
