add todos for acrichto comments

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -8,8 +8,8 @@
 
 This RFC adds portable packed SIMD vector types up to 256-bit.
 
-Future RFCs will cover some of the following extensions as they get implemented
-in `stdsimd`.
+Future RFCs will cover some of the following extensions as they become finished
+in `stdsimd`:
 
 * portable vector shuffles, gathers, and scatters
 * boolean vectors, boolean reductions, portable vector comparisons
@@ -20,7 +20,7 @@ in `stdsimd`.
 [motivation]: #motivation
 
 The `std::arch` module exposes architecture-specific SIMD types like `_m128` - a
-128-bit wide SIMD type. How these bits are interpreted depends on the intrinsics
+128-bit wide SIMD vector type. How these bits are interpreted depends on the intrinsics
 being used. For example, let's sum 8 `f32`s values using the SSE4.1 facilities
 in the `std::arch` module. This is one way to do it
 ([playground](https://play.rust-lang.org/?gist=165e2886b4883ec98d4e8bb4d6a32e22&version=nightly)):
@@ -45,17 +45,19 @@ fn main() {
 
 Notice that:
 
-* one has to put some effort to extrapolate with the signature what `add_reduce`
-  actually does: "ok, add_reduce, takes 128-bit vectors, returns a `f32`, ah!
-  Those 128-bit vectors should probably contain 4 packed f32s!"
+* one has to put some effort to extrapolate from `add_reduce`'s signature what
+  types of vectors it actually expects: "ok, add_reduce takes 128-bit vectors,
+  returns a `f32`, ah! Those 128-bit vectors should probably contain 4 packed
+  f32s because that's the only combination of `f32`s that fits in 128 bits!"
   
-* it requires a lot of unsafe code: the intrinsics are unsafe, the intrinsic API
-  relies on the user performing transmutes
+* it requires a lot of `unsafe` code: the intrinsics are unsafe, the intrinsic API
+  relies on the user performing transmutes, constructing the vectors is unsafe, etc.
 
 * it requires a lot of architecture specific knowledge: how the intrinsics are
   called, how they are used together
   
-* this solution only works on `x86` or `x86_64` with SSE3 enabled.
+* this solution only works on `x86` or `x86_64` with SSE4.1 enabled, that is, it
+  is not portable.
 
 With portable packed vector types we can do much better
 ([playground](https://play.rust-lang.org/?gist=7fb4e3b6c711b5feb35533b50315a5fb&version=nightly)):
@@ -69,7 +71,7 @@ fn main() {
 }
 ```
 
-in both cases, the same code is generated:
+Note that Rust generates the same assembly instruction sequence in both situations:
 
 ```asm
   haddps xmm0, xmm1
@@ -77,6 +79,9 @@ in both cases, the same code is generated:
   haddps xmm0, xmm1
   haddps xmm0, xmm1
 ```
+
+Which reveals another key feature of these vector types: they add
+zero-overhead - or we have a bug in the implementation that we must fix.
 
 # Guide-level explanation
 [guide-level-explanation]: #guide-level-explanation
@@ -90,7 +95,7 @@ This RFC introduces portable packed SIMD vector types and their minimal API. Her
   
 * packed: is the opposite of "scalable" or "Cray vectors". That is, these
   vector's have a compile-time fixed length. They can be stored inside structs,
-  on the stack, on the heap, passed via ABIs.
+  on the stack, and on the heap.
   
 # Reference-level explanation
 [reference-level-explanation]: #reference-level-explanation
@@ -163,7 +168,9 @@ the following traits:
 * `PartialEq<Self>`: performs a lane-wise comparison between two vectors and
   returns `true` if all lanes compare `true`.
 * `PartialOrd<Self>`: performs a lane-wise comparison between two vectors and
-  returns `true` if all lanes compare `true`.
+  returns `true` if all lanes compare `true`. TODO: we should actually perform a
+  lexicographical order here. Does this make sense? It's not going to be
+  efficient. What we currently do IIRC is `a.lt(b).all()`.
 * `From`/`Into`/`FromBits`/`IntoBits`: see the [lane-wise casts and bitwise
   conversions](#casts-and-conversions) section below.
 * `Add<Output=Self>`, `Sub<Output=Self>`, `Mul<Output=Self>`, 
@@ -244,6 +251,11 @@ The portable vector types implement lane-wise and bitwise casts.
 
 ##### Lane-wise casts
 
+TODO: `From`/`Into` are lossless. What we actually want here is `as` casts.
+Implementing `From`/`Into`` here with a different meaning is not going to
+survive the RFC process. The alternative was `.as_f32x4()` methods, but that was
+painful to implement and use.
+
 Vectors with identical number of lanes can be converted into each other by
 performing lane-wise `as` casts provided by the `From` and `Into` traits. 
 
@@ -258,6 +270,10 @@ These conversions are provided across all portable vector types having the same
 number of lanes.
 
 ##### Bitwise casts
+
+TODO: `f32::from_bits` takes a `u32`, if we were to add these as methods we'd
+need to add a bunch of them for each type as well `__m128::from_bits_{f32x4,
+...}`..
 
 To interface with the architecture-specific vector types and intrinsics it is
 often required to perform lossless bitwise casts from one type to another.
