add more todos from sunfish comments

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -244,6 +244,27 @@ pub unsafe fn replace_unchecked(self, index: usize,
 }
 ```
 
+TODO: @sunfish commented that `new` lowers to a memory load even when all
+arguments are constant. This is inefficient, and probably something to be
+discouraged (people should be doing a load here, or a sequence of replaces). 
+
+OTOH @gnzlbg finds this useful, but that might be because it is useful inside
+`stdsimd` to write tests and short examples, but arguably it is not something
+used by high-performance code.
+
+It might thus make sense to:
+
+* have a way to construct these from compile-time constants
+* use that way to construct these when all arguments to `new` are constants
+* either require the arguments of `new` to be constants, or add a way that
+  requires this, like a literal syntax for the simd types: `f32x4(1., 2., 3.,
+  4.)` that requires all input arguments to be compile-time constants.
+  
+Skimming through `stdsimd` I can't find a single place where `new` is used with
+non-constant arguments.
+
+
+
 #### Lane-wise casts and bitwise conversions
 [casts-and-conversions]: #casts-and-conversions
 
@@ -292,6 +313,10 @@ let y: __m128 = x.into_bits();
 These conversions are provided across all portable vector types of the same
 width, and across the portable vector types and the architecture-specific vector
 types.
+
+TODO: @sunfish gave the following comment: If the bitwise casts can convert
+between vectors with different numbers of elements (eg. between `i8x16` and
+`i16x8`), the results will depend on the endianness of the machine.
 
 #### Loads and Stores
 
@@ -364,6 +389,9 @@ pub unsafe fn load_unaligned_unchecked(slice: &[element_type]) -> Self;
 }
 ```
 
+TODO: @sunfish gave the following comment: need to document how big-endian does
+things.
+
 #### Arithmetic reductions 
 
 All portable vector types implement the following methods:
@@ -386,8 +414,17 @@ If integer overflow occurs the result is the mathematical result modulo `2^n`.
 
 ##### Semantics for floating point vectors.
 
-The floating-point horizontal reductions are unordered. That is, the reductions
-are **not** equivalent to:
+The floating-point horizontal reductions are ordered (TODO), that is,
+equivalent to the following Rust code:
+
+```rust
+// TODO
+```
+
+TODO: @sunfish commented that ordered reductions can be made pretty efficient by
+doing a tree reduction (VPADD on NEON, HADDPS on x86): `(x[0]+x[1])+(x[2]+x[3])`
+but nothe that this is not equivalent to `x[0] + x[1] + x[2] + x[3]` which is
+what the following code would do:
 
 ```rust
 let mut val: f32 = vec.extract(0);
@@ -396,6 +433,10 @@ for i in 1..f32x4::lanes() {
 }
 assert_eq!(val, vec.sum()); // MAYBE FAILS
 ```
+
+TODO: AFAICT the LLVM reductions don't do a tree reduction, but I should
+triple-check this.
+
 
 #### Bitwise reductions 
 
@@ -434,7 +475,41 @@ pub fn min(self) -> element_type;
 
 ##### Semantics for floating-point vectors
 
-If the vector contains `NaN`s the result is unspecified. 
+If the vector contains `NaN`s the result is unspecified (TODO). 
+
+TODO: @sunfish would prefer to handle `NaNs` in Min/Max by default and, if
+desired, adding a version that optimizes for the non-`NaN`s case as an
+alternative.
+
+If the vector contains a `NaN`, then both `min`/`max` would return it:
+
+```rust
+let nan: f32 = 1. / 0.;
+let vec = f32x4::new(1., 2., nan, 3.);
+assert_eq!(vec.max() as u32, nan as u32);
+assert_eq!(vec.min() as u32, nan as u32);
+```
+
+The problem is what do we do when the vector has multiple `NaN`s ? That is, given
+
+```rust
+let nan_0: f32 = ...some nan...;
+let nan_1: f32 = ...some nan...;
+let nan_2: f32 = ...some nan...;
+let nan_3: f32 = ...some nan...;
+assert!(nan_0 as u32 != nan_1 as u32 && nan_0 as u32 != nan_2 as u32 &&
+        nan_0 as u32 != nan_3 as u32);
+assert!(nan_1 as u32 != nan_2 as u32 && nan_1 as u32 != nan_3 as u32);
+assert!(nan_2 as u32 != nan_3 as u32);
+let vec = f32x4::new(nan_0, nan_1, nan_2, nan_3);
+asset_eq!(vec.max() as u32, ???);
+asset_eq!(vec.min() as u32, ???);
+```
+
+We should check how to implement these manually for, e.g., f32x4 on AArch64,
+x86_64, and PowerPC64 and see how the fastest code behaves in the presence of
+NaNs, and what would it take to homogenize the behavior here. The results would
+then belong in the rationale section.
 
 # TODO: ABI 
 
