--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -263,7 +263,21 @@ It might thus make sense to:
 Skimming through `stdsimd` I can't find a single place where `new` is used with
 non-constant arguments.
 
+TODO: @sunfish mentions that he is not aware of any hardware that supports
+dynamic indexing into vector elements:
 
+> It's not horrible, but it's not a SIMD operation. It's a memory operation, and
+> Rust can already do it. Just create a [f32; 4], store the vector there, index it
+> yourself, and the compiler should generate the same code. If this were a common
+> operation, it'd be nice to have a convenient API to do it automatically, but as
+> far as I know it isn't (otherwise we might have hardware for it ;-)). And that
+> way, you don't need the `_unchecked` versions, because users can do whatever
+> unsafe thing they want with memory themselves.
+
+So in a nutshell we might want to require the arguments of `new` and
+`extract`/`store`/`replace` to be `const`s. The problem would be that we can't
+use the `constify!` techniques here that the immediate-mode arguments use in
+`std::arch`, so maybe we'll need to make these be macros for now.
 
 #### Lane-wise casts and bitwise conversions
 [casts-and-conversions]: #casts-and-conversions
