add 256-bit vectors (oversight)

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -151,8 +151,25 @@ the `std::simd` module, that is:
   * `u64x2`
   * `f64x2`
 
-Note that half-float (`f16`) vectors are not part of this RFC but will need to
-be covered by future RFCs extending this one.
+* 256-bit wide vectors:
+  * `i8x32`
+  * `u8x32`
+  * `i16x16`
+  * `u16x16`
+  * `i32x8`
+  * `u32x8`
+  * `f32x8`
+  * `i64x4`
+  * `u64x4`
+  * `f64x4`
+
+Note that:
+
+* half-float (`f16`) vectors (and half-floats in general) will need to be
+  covered by future RFCs to support ARM/AArch64/PowerPC64/... intrinsics
+* 512-bit wide vectors and masks will need to be covered once `std::arch` adds AVX-512 support
+* vectors with 128-bit wide elements (`{i,u,f}128x1`, `{i,u,f}128x2`) will need
+  to be covered once `std::arch` adds PowerPC support.
 
 ## API of portable packed SIMD vector types
 
