add more terminology; rename element_width to lane_width

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -97,6 +97,21 @@ This RFC introduces portable packed SIMD vector types and their minimal API. Her
   vector's have a compile-time fixed length. They can be stored inside structs,
   on the stack, and on the heap.
   
+Packed vector types are named as follows: `{i,u,f}{lane_width}x{#lanes}`, so that
+`i64x8` is a 512-bit vector with eight `i64` lanes and `f32x4` a 128-bit vector
+with four `f32` lanes.
+
+Operations on vector types can be either:
+
+* vertical: that is, lane-wise. For example, `a + b` adds each lane of `a` with
+  the corresponding lane of `b`, while `a.lt(b)` returns a vector of "bools"
+  indicating whether the `lt` (less-than: `<`) for each lane returned `true` or
+  `false`.
+  
+* horizontal: that is, along a vector. For example, `a.sum()` adds the elements
+  of the vector together and `a.max()` returns the largest element in the
+  vector.
+  
 # Reference-level explanation
 [reference-level-explanation]: #reference-level-explanation
   
@@ -104,7 +119,7 @@ This RFC introduces portable packed SIMD vector types and their minimal API. Her
 
 The vector types are named according to the following scheme:
 
-> {element_type}{element_width}x{number_of_lanes}
+> {element_type}{lane_width}x{number_of_lanes}
 
 where the following element types are introduced by this RFC:
 
@@ -114,7 +129,7 @@ where the following element types are introduced by this RFC:
 
 So that `u16x8` reads "a SIMD vector of eight packed 16-bit wide unsigned
 integers". The width of a vector can be computed by multiplying the
-`{element_width}` times the `{number_of_lanes}`. For `u16x8`, 16 x 8 = 128, so
+`{lane_width}` times the `{number_of_lanes}`. For `u16x8`, 16 x 8 = 128, so
 this vector type is 128 bits wide.
 
 > Note: this nomenclature follows closely the nomenclature used by ARM in their
@@ -216,7 +231,7 @@ All signed and unsigned integer vectors also implement:
 All portable vector types implement the following methods:
 
 ```rust
-impl {element_type}{element_width}x{number_of_lanes} {
+impl {element_type}{lane_width}x{number_of_lanes} {
 
 /// Creates a new instance of the vector from `number_of_lanes` 
 /// values.
@@ -354,7 +369,7 @@ between vectors with different numbers of elements (eg. between `i8x16` and
 All portable vector types implement the following methods:
 
 ```rust
-impl {element_type}{element_width}x{number_of_lanes} {
+impl {element_type}{lane_width}x{number_of_lanes} {
 
 /// Writes the values of the vector to the `slice`.
 ///
@@ -428,7 +443,7 @@ things.
 All portable vector types implement the following methods:
 
 ```rust
-impl {element_type}{element_width}x{number_of_lanes} {
+impl {element_type}{lane_width}x{number_of_lanes} {
 
 /// Horizontal sum of the vector elements.
 pub fn sum(self) -> element_type;
@@ -474,7 +489,7 @@ triple-check this.
 All signed and unsigned integer vectors implement the following methods:
 
 ```rust
-impl {element_type}{element_width}x{number_of_lanes} {
+impl {element_type}{lane_width}x{number_of_lanes} {
 
 /// Horizontal bitwise `and` of the vector elements.
 pub fn and(self) -> element_type;
@@ -493,7 +508,7 @@ pub fn xor(self) -> element_type;
 All portable vector types implement the following methods:
 
 ```rust
-impl {element_type}{element_width}x{number_of_lanes} {
+impl {element_type}{lane_width}x{number_of_lanes} {
             
 /// Value of the largest element in the vector.
 pub fn max(self) -> element_type;
