incorporate nagisa's feed-back

--- a/text/0000-ppv.md
+++ b/text/0000-ppv.md
@@ -13,8 +13,8 @@ in `stdsimd`:
 
 * portable vector shuffles, gathers, and scatters
 * boolean vectors, boolean reductions, portable vector comparisons
-* 512-bit vector types and masks
-* half-float (f16) vectors
+
+and will also attempt to answer some of the unresolved questions.
 
 # Motivation
 [motivation]: #motivation
@@ -46,12 +46,13 @@ fn main() {
 Notice that:
 
 * one has to put some effort to extrapolate from `add_reduce`'s signature what
-  types of vectors it actually expects: "ok, add_reduce takes 128-bit vectors,
-  returns a `f32`, ah! Those 128-bit vectors should probably contain 4 packed
+  types of vectors it actually expects: "`add_reduce` takes 128-bit wide vectors and
+  returns a `f32` therefore those 128-bit vectors _probably_ must contain 4 packed
   f32s because that's the only combination of `f32`s that fits in 128 bits!"
   
-* it requires a lot of `unsafe` code: the intrinsics are unsafe, the intrinsic API
-  relies on the user performing transmutes, constructing the vectors is unsafe, etc.
+* it requires a lot of `unsafe` code: the intrinsics are unsafe, the intrinsic
+  API relies on the user performing transmutes, constructing the vectors is
+  unsafe because it needs to be done via intrinsic calls, etc.
 
 * it requires a lot of architecture specific knowledge: how the intrinsics are
   called, how they are used together
@@ -71,7 +72,8 @@ fn main() {
 }
 ```
 
-Note that Rust generates the same assembly instruction sequence in both situations:
+In both cases, for `x86_64`, Rust generates the exact same assembly instruction
+sequence:
 
 ```asm
   haddps xmm0, xmm1
@@ -80,8 +82,18 @@ Note that Rust generates the same assembly instruction sequence in both situatio
   haddps xmm0, xmm1
 ```
 
-Which reveals another key feature of these vector types: they add
-zero-overhead - or we have a bug in the implementation that we must fix.
+And this is key: these types add zero-overhead over the architecture-specific
+types for the operations that they support - if there is an architecture in
+which this does not hold for some operation: the implementation has a bug.
+
+TODO: @sunfish this implies that in some arch we might need to lower `(a +
+b).sum()` into a single instruction. That is, every single piece of this API
+must be something that the backend understands :/
+
+TODO: @alex an alternative would be to not say anything here about
+zero-overhead, that is, while we might be able to guarantee some overhead in
+some cases, we can't really work around backed bugs in lowering combinations of
+operations like `(a + b).sum()`.
 
 # Guide-level explanation
 [guide-level-explanation]: #guide-level-explanation
@@ -94,8 +106,8 @@ This RFC introduces portable packed SIMD vector types and their minimal API. Her
   write better code by hand (otherwise it is an implementation bug).
   
 * packed: is the opposite of "scalable" or "Cray vectors". That is, these
-  vector's have a compile-time fixed length. They can be stored inside structs,
-  on the stack, and on the heap.
+  vector's have a compile-time fixed size. Therefore, they can be stored inside
+  structs, on the stack, and on the heap.
   
 Packed vector types are named as follows: `{i,u,f}{lane_width}x{#lanes}`, so that
 `i64x8` is a 512-bit vector with eight `i64` lanes and `f32x4` a 128-bit vector
@@ -106,11 +118,15 @@ Operations on vector types can be either:
 * vertical: that is, lane-wise. For example, `a + b` adds each lane of `a` with
   the corresponding lane of `b`, while `a.lt(b)` returns a vector of "bools"
   indicating whether the `lt` (less-than: `<`) for each lane returned `true` or
-  `false`.
+  `false`. Most vertical operations are binary operations (they take two input
+  vectors). These operations are typically very fast - this is how vectors should
+  be used.
   
-* horizontal: that is, along a vector. For example, `a.sum()` adds the elements
-  of the vector together and `a.max()` returns the largest element in the
-  vector.
+* horizontal: that is, along a vector. Horizontal operations are unary, that is,
+  they take one input vector. For example, `a.sum()` adds the elements of the
+  vector together and `a.max()` returns the largest element in the vector. These
+  operations are typically slower than vertical operations but in some cases
+  they are necessary.  
   
 # Reference-level explanation
 [reference-level-explanation]: #reference-level-explanation
@@ -208,6 +224,8 @@ the following traits:
 * `Add<Output=Self>`, `Sub<Output=Self>`, `Mul<Output=Self>`, 
   `Div<Output=Self>`, `Rem<Output=Self>`, `AddAssign`, `SubAssign`, `MulAssign`, 
   `DivAssign`, `RemAssign`: lane-wise arithmetic operations.
+* TODO: arithmetic operations with vector's element type: `Add<f32> for f32x4`.
+  Can probably be initially implemented as splat + vector op.
 
 All signed and unsigned integer vectors also implement:
 
@@ -221,8 +239,11 @@ All signed and unsigned integer vectors also implement:
 * `Not<Output=Self>`,`BitAnd<Output=Self>`, `BitOr<Output=Self>`,
   `BitXor<<Output=Self>`, `BitAndAssign`, `BitOrAssign`,
   `BitXorAssign`: lane-wise bitwise operations.
-* `Shl<*>`, `Shr<*>`, `ShlAssign<*>`,`ShrAssign<*>`: shifts for all literal
-  integer types.
+* TODO: bitwise operations with vector element type: `BitAnd<u32> for u32x4`.
+  can probably be initially implemented as splat + vector op.
+* TODO: shifts for vector type: `Shl<Self>` and friends
+* `Shl<T>`, `Shr<T>`, `ShlAssign<T>`,`ShrAssign<T>`: for all types `T` in {`i8`, `i16`,
+  `i32`, `i64`, `i128`, `isize`, `u8`, `u16`, `u32`, `u64`, `u128`, `usize`}.
 
 ### Inherent Methods
 
@@ -261,15 +282,11 @@ pub unsafe fn extract_unchecked(self, index: usize) -> element_type;
 /// # Panics
 ///
 /// If `index >= Self::lanes()`.
-#[must_use = implementation-defined]
+#[must_use = error-message]
 pub fn replace(self, index: usize, new_value: $elem_ty) -> Self;
 
 /// Returns a new vector where the value at `index` is replaced by `new_value`.
-///
-/// # Panics
-///
-/// If `index >= Self::lanes()`.
-#[must_use = implementation-defined]
+#[must_use = error-message]
 pub unsafe fn replace_unchecked(self, index: usize, 
                                 new_value: element_type) -> Self;
 
@@ -408,7 +425,7 @@ pub unsafe fn store_unaligned_unchecked(self, slice: &mut [element_type]);
 ///
 /// If `slice.len() < Self::lanes()` or `&slice[0]` is not aligned
 /// to an `align_of::<Self>()` boundary.
-pub fn load_aligned(slice: &[element_type]) -> Self
+pub fn load_aligned(slice: &[element_type]) -> Self;
 
 /// Instantiates a new vector with the values of the `slice`.
 ///
@@ -456,12 +473,22 @@ pub fn product(self) -> element_type;
 
 ##### Semantics for integer vectors
 
-If integer overflow occurs the result is the mathematical result modulo `2^n`. 
+For integer vectors, if integer overflow occurs the result is the same as for
+overflow with regular integers when no `-C debug-assertions` are enabled. 
+
+In most architectures this corresponds to the mathematical result modulo `2^n`.
+
+TODO: I am a bit uncomfortable with integers overflowing here. We should
+probably offer the same behavior as for non-vector integers, and offer ways to
+opt into wrapping arithmetic.
 
 ##### Semantics for floating point vectors.
 
-The floating-point horizontal reductions are ordered (TODO), that is,
-equivalent to the following Rust code:
+For floating-point vectors, the floating-point horizontal reductions are ordered
+(TODO), that is, equivalent to the following Rust code:
+
+TODO: see below for a `#[fast_math(...)]` alternative approach to this, e.g.,
+`#[fast_math(assume = "associativity")]` could use a different ordering.
 
 ```rust
 // TODO
@@ -527,6 +554,13 @@ TODO: @sunfish would prefer to handle `NaNs` in Min/Max by default and, if
 desired, adding a version that optimizes for the non-`NaN`s case as an
 alternative.
 
+TODO: an alternative is to offer a Rust API here, and to provide fast-math via a
+different mechanism, like a crate/module/function/block-scoped attribute:
+`#[fast_math(assume="all", require="associativity")]` to enable all fast-math
+assumptions except for associativity, or `#[fast_math(assume="finite")]` to only
+enable fast-math that assumes finite-arithmetic (e.g. no `NaN`s). I think
+something like this is something that Rust might want to expose anyways.
+
 If the vector contains a `NaN`, then both `min`/`max` would return it:
 
 ```rust
@@ -577,6 +611,20 @@ one form or another, and if the backend supports the architecture-specific
 vector types exposed by `std::arch` chances are that very little work will
 actually be required to support this.
 
+TODO: @sunfish? However, the zero-overhead requirement requires the backend to
+be able to optimize sequences of operations in architectures that support them.
+For example, imagine that a future architecture would provide a `add_and_reduce`
+instruction for float vectors. In that architecture, `(a + b).sum()` would need
+to be lowered to that single instruction. This is not something that can be
+worked around in a library implementation, but rather something that needs
+compiler and backend support.
+
+TODO: @sunfish? Another drawback is that depending on the features enabled and
+the architecture, some of the operations exposed here are slow. As in, the
+backed will currently generate scalar code that operates on the vector using
+extract + replace. Is it possible for backends to transform vector operations
+back to scalar code that's "efficient" (e.g. a loop)?
+
 # Rationale and alternatives
 [alternatives]: #alternatives
 
@@ -599,4 +647,96 @@ comes from.
 # Unresolved questions
 [unresolved]: #unresolved-questions
 
-TBD.
+### Interaction with Cray vectors
+
+The vector types proposed in this RFC are packed, that is, their size is fixed
+at compile-time.
+
+Many modern architectures support vector operations of run-time size, often
+called Cray Vectors or scalable vectors. These include, amongst others, NecSX,
+ARM SVE, RISC-V Vectors. These architectures have traditionaly relied on
+auto-vectorization combined with support for explicit vectorization annotations,
+but newer architectures like ARM SVE and RISC-V introduce explicit vectorization
+intrinsics. 
+
+This is an example adapted from this [ARM SVE
+paper](https://developer.arm.com/hpc/arm-scalable-vector-extensions-and-application-to-machine-learning)
+to pseudo-Rust:
+
+```rust
+/// Adds `c` to every element of the slice `src` storing the result in `dst`.
+fn add_constant(dst: &mut [f64], src: &[f64], c: f64) {
+    assert!(dst.len() == src.len());
+    
+    // Instantiate a dynamic vector (f64xN) with all lanes set to c:
+    let vc: f64xN = f64xN::splat(c);
+    
+    // The number of lanes that each iteration of the loop can process
+    // is unknown at compile-time (f64xN::lanes() is evaluated at run-time):
+    for i in (0..src.len()).step_by_with(f64xN::lanes()) {
+    
+        // Instantiate a dynamic boolean vector with the
+        // result of the predicate: `i + lane < src.len()`.
+        // This boolean vector acts as a mask, so that elements 
+        // "in-bounds" of the slice `src` are initialized to `true`,
+        // while out-of-bounds elements contain `false`:
+        let m: bxN = f64xN::while_lt(i, src.len());
+
+        // Load the elements of the source using the mask:
+        let vsrc: f64xN = f64xN::load(m, &src[i..]);
+        
+        // Add the vector with the constan using the mask:
+        let vdst: f64xN = vsrc.add(m, vc);
+        
+        // Store the result back to memory using the mask:
+        vdst.store(m, &mut dst[i..]);
+    }
+}
+```
+
+RISC-V proposes a model smilar in spirit, but not identical to the ARM SVE one.
+It would not be surprising if other popular architectures offered similar but
+not identical explicit vectorization models for Cray vectors in the future.
+
+Notice that while the API of scalable vectors is similar to that of packed
+vectors, there are some important differences
+
+The number of lanes is only known at run-time. That is, Cray Vectors are types
+of run-time size and it is unclear at this point of `mem::size_of::<f64xN>()`
+will be able to return anything meaningful at compile-time or not (maybe they
+might be "pointer sized", @eddyb?).
+
+This affects how they are used. First, the induction loop variable is
+incremented with a dynamic value. (@eddyb does a stride that changes across loop
+iterations make sense here? Some architectures might do that?)
+
+Second, in these architectures most operations require a mask that indicate
+which elements are part of the vector and which aren't. The operations are not
+performed on elements that aren't part of the vector. This encourages a
+different API than that of packed vectors.
+
+At these point in time it is still unclear how the current APIs actually work in
+practice and designing a portable API for Cray vectors is an open research
+problem. 
+
+As shown above, such an API could be made to look "similar", but probably not
+identical. This RFC does not prevent adding such an API in the future. 
+
+Providing a portable API for both packed and Cray vectors is thus
+out-of-scope for this RFC. 
+
+At this point in time, whether packed and scalable vector types can interact
+with each other is unknown (TODO: how does SVE interact with ASIMD/NEON? I can't
+find anything about this online anywhere), and so is how this interaction would
+look like iff they could interact.
+
+### Half-float support
+
+Many vector intrinsics on many architectures operates on vectors of half-floats
+(`f16`) types. It is unclear what to do with these as this point since the `f16`
+type is even less portable than the `{i,u}128` types.
+
+Initially they will be explored as architecture-specific vector types. Whether
+vectors of `f16` types can be made portable or not remains to be explored.
+
+### 512-bit vector types and masks
